fix(TDOPS-5733): Notification long messages should break on words (#5099)

--- a/packages/components/src/Notification/Notification.module.scss
+++ b/packages/components/src/Notification/Notification.module.scss
@@ -85,7 +85,7 @@ $tc-notification-icon-size: $svg-md-size !default;
 	&-message {
 		margin-right: $padding-larger;
 		font-size: $font-size-small;
-		word-break: break-all;
+		word-break: break-word;
 
 		&:last-of-type {
 			margin-bottom: 0;
